==> ARMmbed/mbed-os/features/mbedtls/targets/TARGET_Cypress/TARGET_MXCRYPTO/aes_alt.c <==
#include "mbedtls/config.h"
#include MBEDTLS_CONFIG_FILE
#include <string.h>
#include "mbedtls/aes.h"
#include "mbedtls/platform.h"
#include "mbedtls/platform_util.h"
#define AES_VALIDATE_RET( cond )    \
    MBEDTLS_INTERNAL_VALIDATE_RET( cond, MBEDTLS_ERR_AES_BAD_INPUT_DATA )
#define AES_VALIDATE( cond )        \
    MBEDTLS_INTERNAL_VALIDATE( cond )
#include "crypto_common.h"
#include "cy_crypto_core.h"

void mbedtls_aes_init( mbedtls_aes_context *ctx )
{
    AES_VALIDATE( ctx != NULL );

    cy_hw_zeroize(ctx, sizeof( mbedtls_aes_context ) );

    (void)cy_hw_crypto_reserve((cy_hw_crypto_t *)ctx, CYHAL_CRYPTO_COMMON);
}

int mbedtls_internal_aes_encrypt( mbedtls_aes_context *ctx,
                                  const unsigned char input[16],
                                  unsigned char output[16] )
{
    int ret = 0;
    cy_en_crypto_status_t status;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( ctx->aes_state.buffers != NULL );

    status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_ENCRYPT, output, input, &ctx->aes_state);

    if (CY_CRYPTO_SUCCESS != status)
    {
        ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
    }

    return( ret );
}

int mbedtls_internal_aes_decrypt( mbedtls_aes_context *ctx,
                                  const unsigned char input[16],
                                  unsigned char output[16] )
{
    int ret = 0;
    cy_en_crypto_status_t status;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( ctx->aes_state.buffers != NULL );

    status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_DECRYPT, output, input, &ctx->aes_state);

    if (CY_CRYPTO_SUCCESS != status)
    {
        ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
    }

    return( ret );
}

int mbedtls_aes_crypt_cbc( mbedtls_aes_context *ctx,
                    int mode,
                    size_t length,
                    unsigned char iv[16],
                    const unsigned char *input,
                    unsigned char *output )
{
    unsigned char temp[CY_CRYPTO_AES_BLOCK_SIZE];

    int ret = 0;
    cy_en_crypto_status_t status;

    AES_VALIDATE_RET( ctx != NULL );
    AES_VALIDATE_RET( mode == MBEDTLS_AES_ENCRYPT ||
                      mode == MBEDTLS_AES_DECRYPT );
    AES_VALIDATE_RET( iv != NULL );
    AES_VALIDATE_RET( input != NULL );
    AES_VALIDATE_RET( output != NULL );

    if( length % CY_CRYPTO_AES_BLOCK_SIZE )
        return( MBEDTLS_ERR_AES_INVALID_INPUT_LENGTH );

    AES_VALIDATE_RET( ctx->aes_state.buffers != NULL);

    if( mode == MBEDTLS_AES_DECRYPT )
    {
        while(( length > 0 ) && (ret == 0))
        {
            Cy_Crypto_Core_MemCpy(ctx->obj.base, temp, input, CY_CRYPTO_AES_BLOCK_SIZE);

            status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_DECRYPT, output, input, &ctx->aes_state);

            Cy_Crypto_Core_MemXor(ctx->obj.base, output, output, iv, CY_CRYPTO_AES_BLOCK_SIZE);
            Cy_Crypto_Core_MemCpy(ctx->obj.base, iv, temp, CY_CRYPTO_AES_BLOCK_SIZE);

            input  += CY_CRYPTO_AES_BLOCK_SIZE;
            output += CY_CRYPTO_AES_BLOCK_SIZE;
            length -= CY_CRYPTO_AES_BLOCK_SIZE;

            if (CY_CRYPTO_SUCCESS != status)
            {
                ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
            }
        }
    }
    else
    {
        while(( length > 0 ) && (ret == 0))
        {
            Cy_Crypto_Core_MemXor(ctx->obj.base, output, input, iv, CY_CRYPTO_AES_BLOCK_SIZE);

            status = Cy_Crypto_Core_Aes_Ecb(ctx->obj.base, CY_CRYPTO_ENCRYPT, output, output, &ctx->aes_state);

            Cy_Crypto_Core_MemCpy(ctx->obj.base, iv, output, CY_CRYPTO_AES_BLOCK_SIZE);

            input  += CY_CRYPTO_AES_BLOCK_SIZE;
            output += CY_CRYPTO_AES_BLOCK_SIZE;
            length -= CY_CRYPTO_AES_BLOCK_SIZE;

            if (CY_CRYPTO_SUCCESS != status)
            {
                ret = MBEDTLS_ERR_AES_HW_ACCEL_FAILED;
            }
        }
    }

    return( ret );
}

static void mbedtls_gf128mul_x_ble( unsigned char r[16],
                                    const unsigned char x[16] )
{
    uint64_t a, b, ra, rb;

    GET_UINT64_LE( a, x, 0 );
    GET_UINT64_LE( b, x, 8 );

    ra = ( a << 1 )  ^ 0x0087 >> ( 8 - ( ( b >> 63 ) << 3 ) );
    rb = ( a >> 63 ) | ( b << 1 );

    PUT_UINT64_LE( ra, r, 0 );
    PUT_UINT64_LE( rb, r, 8 );
}
